--- a/flaek-client/index.html
+++ b/flaek-client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flaek — Verifiable Private Compute</title>
+    <title>Flaek — Build Private Data Pipelines Visually</title>
   </head>
   <body>
     <div id="root"></div>
